[gd_scene load_steps=11 format=3 uid="uid://dwmquebmd4hmc"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_162wa"]
[ext_resource type="Texture2D" uid="uid://nhcr6bxlsjlv" path="res://assets/deathscreen.jpg" id="2_it5m7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sm80y"]
bg_color = Color(0.168627, 0.168627, 0.168627, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_umyxv"]
bg_color = Color(0.337255, 0.0627451, 0.631373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h6k5h"]
bg_color = Color(0.458824, 0.0941176, 0.0470588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o50fi"]
bg_color = Color(0.737255, 0.458824, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k7afc"]

[sub_resource type="LabelSettings" id="LabelSettings_gaham"]
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_jxoot"]
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_0tcsn"]
font_size = 128
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="UI" type="Control"]
z_index = 1000
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_162wa")

[node name="Rp" type="ProgressBar" parent="."]
z_index = 11
layout_mode = 0
offset_left = 625.0
offset_top = 810.0
offset_right = 975.0
offset_bottom = 843.0
theme_override_styles/background = SubResource("StyleBoxFlat_sm80y")
theme_override_styles/fill = SubResource("StyleBoxFlat_umyxv")
step = 1.0
value = 100.0

[node name="Hp" type="ProgressBar" parent="."]
z_index = 10
layout_mode = 0
offset_left = 625.0
offset_top = 848.0
offset_right = 975.0
offset_bottom = 881.0
theme_override_styles/background = SubResource("StyleBoxFlat_sm80y")
theme_override_styles/fill = SubResource("StyleBoxFlat_h6k5h")
step = 1.0
value = 100.0

[node name="Cast" type="ProgressBar" parent="."]
z_index = 3
layout_mode = 0
offset_left = 625.0
offset_top = 772.0
offset_right = 975.0
offset_bottom = 805.0
theme_override_styles/background = SubResource("StyleBoxFlat_sm80y")
theme_override_styles/fill = SubResource("StyleBoxFlat_o50fi")
step = 1.0
show_percentage = false

[node name="CastText" type="Label" parent="Cast"]
layout_mode = 0
offset_left = -5.0
offset_right = 355.0
offset_bottom = 33.0
label_settings = SubResource("LabelSettings_k7afc")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="CD1" type="ProgressBar" parent="Cast"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = -75.0
offset_right = -71.0
offset_bottom = -10.0
fill_mode = 3
show_percentage = false

[node name="Label" type="Label" parent="Cast/CD1"]
layout_mode = 0
offset_right = 65.0
offset_bottom = 65.0
text = "MF"
label_settings = SubResource("LabelSettings_gaham")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Cast/CD1"]
layout_mode = 0
offset_left = 2.0
offset_top = -26.0
offset_right = 64.0
text = "1/A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CD2" type="ProgressBar" parent="Cast"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.0
offset_top = -75.0
offset_right = -2.0
offset_bottom = -10.0
grow_horizontal = 2
fill_mode = 3
show_percentage = false

[node name="Label" type="Label" parent="Cast/CD2"]
layout_mode = 0
offset_right = 65.0
offset_bottom = 65.0
text = "VB"
label_settings = SubResource("LabelSettings_gaham")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Cast/CD2"]
layout_mode = 0
offset_left = 1.0
offset_top = -26.0
offset_right = 63.0
text = "2/B"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CD3" type="ProgressBar" parent="Cast"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 2.0
offset_top = -75.0
offset_right = 67.0
offset_bottom = -10.0
grow_horizontal = 2
fill_mode = 3
show_percentage = false
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Cast/CD3"]
layout_mode = 0
offset_right = 65.0
offset_bottom = 65.0
text = "MB"
label_settings = SubResource("LabelSettings_gaham")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Cast/CD3"]
layout_mode = 0
offset_left = 2.0
offset_top = -26.0
offset_right = 64.0
text = "3/X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CD4" type="ProgressBar" parent="Cast"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 71.0
offset_top = -75.0
offset_right = 136.0
offset_bottom = -10.0
grow_horizontal = 2
fill_mode = 3
show_percentage = false
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Cast/CD4"]
layout_mode = 0
offset_right = 65.0
offset_bottom = 65.0
text = "SD"
label_settings = SubResource("LabelSettings_gaham")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Cast/CD4"]
layout_mode = 0
offset_left = 2.0
offset_top = -26.0
offset_right = 64.0
text = "4/Y"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CDSmall1" type="ProgressBar" parent="Cast"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = -50.0
offset_right = -140.0
offset_bottom = -10.0
fill_mode = 3
show_percentage = false

[node name="Label" type="Label" parent="Cast/CDSmall1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
text = "SM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CDSmall2" type="ProgressBar" parent="Cast"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = 140.0
offset_top = -50.0
offset_right = 180.0
offset_bottom = -10.0
fill_mode = 3
show_percentage = false

[node name="Label" type="Label" parent="Cast/CDSmall2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
text = "S"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Speed" type="Label" parent="."]
layout_mode = 0
offset_left = 1364.0
offset_top = 21.0
offset_right = 1561.0
offset_bottom = 63.0
label_settings = SubResource("LabelSettings_jxoot")
vertical_alignment = 1

[node name="BossHp" type="ProgressBar" parent="."]
z_index = 10
layout_mode = 0
offset_left = 625.0
offset_top = 25.0
offset_right = 975.0
offset_bottom = 58.0
theme_override_styles/background = SubResource("StyleBoxFlat_sm80y")
theme_override_styles/fill = SubResource("StyleBoxFlat_h6k5h")
step = 1.0
value = 100.0

[node name="BossCast" type="ProgressBar" parent="."]
z_index = 3
layout_mode = 0
offset_left = 625.0
offset_top = 63.0
offset_right = 975.0
offset_bottom = 96.0
theme_override_styles/background = SubResource("StyleBoxFlat_sm80y")
theme_override_styles/fill = SubResource("StyleBoxFlat_o50fi")
step = 1.0
show_percentage = false

[node name="CastText" type="Label" parent="BossCast"]
layout_mode = 0
offset_left = -10.0
offset_right = 350.0
offset_bottom = 33.0
label_settings = SubResource("LabelSettings_k7afc")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="Countdown" type="Label" parent="."]
layout_mode = 0
offset_left = 620.0
offset_top = 77.0
offset_right = 980.0
offset_bottom = 227.0
label_settings = SubResource("LabelSettings_0tcsn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(135, 436)
scale = Vector2(0.138702, 0.707965)
texture = ExtResource("2_it5m7")
